--- a/src/Components/EnergyMeter/EnergyMeter.css
+++ b/src/Components/EnergyMeter/EnergyMeter.css
@@ -15,9 +15,10 @@
 	height: 3%;
 	width: 80%;
 	left: 10%;
-	background-color: green;
+
 	position: relative;
 	border-radius: 35%;
+	border: 0.5px solid grey;
 }
 
 .power-level-2 {
@@ -26,9 +27,10 @@
 	height: 3%;
 	width: 70%;
 	left: 15%;
-	background-color: yellow;
+
 	position: relative;
 	border-radius: 35%;
+	border: 0.5px solid grey;
 }
 
 .power-level-3 {
@@ -37,11 +39,24 @@
 	height: 3%;
 	width: 60%;
 	left: 20%;
-	background-color: red;
+
 	position: relative;
 	border-radius: 35%;
+	border: 0.5px solid grey;
 }
 
 .first-power-level {
 	margin-top: 5%;
+}
+
+.green {
+	background-color: green;
+}
+
+.yellow {
+	background-color: yellow;
+}
+
+.red {
+	background-color: red;
 }
