--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,17 +1,36 @@
 .button {
-	background-color: #4caf50; /* Green */
-	border: none;
-	color: white;
-	padding: 15px 32px;
+	padding: 15px 25px;
+	font-size: 24px;
 	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
 	cursor: pointer;
-	width: 120px;
+	outline: none;
+	color: #fff;
+	background-color: #4caf50;
+	border: none;
+	border-radius: 15px;
+	width: 130px;
+	box-shadow: 0 9px #999;
 }
 
 .button-inactive {
 	background-color: #555555;
+}
+.button:hover {
+	background-color: #3e8e41;
+}
+
+.button:active {
+	background-color: #3e8e41;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
+}
+
+.button-inactive:hover {
+	background-color: black;
+}
+
+.button-inactive:active {
+	background-color: black;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
 }
